specify git repo for pip

--- a/environments/conda.yaml
+++ b/environments/conda.yaml
@@ -10,4 +10,4 @@ dependencies:
   - galsim
   - galsim_extra
   - pip:
-    - git+https://github.com/LSSTDESC/seacliff
+    - git+https://github.com/LSSTDESC/seacliff.git
